Dodanie walidacji do kroków rezerwacji

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -11,6 +11,17 @@
   "buttonBack": "Back",
   "buttonConfirm": "Confirm",
 
+  "inputDateFrom": "Start date",
+  "inputDateTo": "End date",
+  "inputDateClear": "Clear",
+  "inputDateCancel": "Cancel",
+  "inputPersonCount": "Person count",
+  "inputEmail": "Email address",
+  "inputPhone": "Phone number",
+
+  "validationDateRange": "Invalid date range",
+  "validationRequired": "Field required",
+
   "bookingButtonAdd": "Add to reservation",
   "bookingStepTripInformation": "Information",
   "bookingStepTripInformationDescription": "Provide information about your trip to get started",
@@ -22,13 +33,6 @@
   "bookingStepServiceListDescription": "Select additional services",
   "bookingStepConfirm": "Confirmation",
   "bookingStepConfirmDescription": "Provide contact data and confirm booking",
-  "bookingDateClear": "Clear",
-  "bookingDateCancel": "Cancel",
-  "bookingDateFrom": "Start date",
-  "bookingDateTo": "End date",
-  "bookingPersonCount": "Person count",
-  "bookingEmail": "Email address",
-  "bookingPhone": "Phone number",
   "bookingNoActivitySelected": "No activity",
   "bookingNoActivitySelectedDescription": "Select a day and add activity to it using the list below",
   "bookingConfirmation": "Booking confirmation",
