--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -11,6 +11,17 @@
   "buttonBack": "Wstecz",
   "buttonConfirm": "Potwierdź",
 
+  "inputDateFrom": "Data początku",
+  "inputDateTo": "Data końca",
+  "inputDateClear": "Wyczyść",
+  "inputDateCancel": "Anuluj",
+  "inputPersonCount": "Ilość osób",
+  "inputEmail": "Adres email",
+  "inputPhone": "Telefon",
+
+  "validationDateRange": "Błędny zakres dat",
+  "validationRequired": "Pole wymagane",
+
   "bookingButtonAdd": "Dodaj do rezerwacji",
   "bookingStepTripInformation": "Informacje",
   "bookingStepTripInformationDescription": "Podaj informacje o swojej podróży aby zacząć proces rezerwacji",
@@ -22,13 +33,6 @@
   "bookingStepServiceListDescription": "Wybierz dodatkowe usługi",
   "bookingStepConfirm": "Potwierdzenie",
   "bookingStepConfirmDescription": "Podaj dane kontaktowe i potwierdź rezerwację",
-  "bookingDateClear": "Czyść",
-  "bookingDateCancel": "Anuluj",
-  "bookingDateFrom": "Data początku",
-  "bookingDateTo": "Data końca",
-  "bookingPersonCount": "Ilość osób",
-  "bookingEmail": "Adres email",
-  "bookingPhone": "Telefon",
   "bookingNoActivitySelected": "Brak aktywności",
   "bookingNoActivitySelectedDescription": "Zaznacz dzień i dodaj do niego aktywność korzystając z listy poniżej",
   "bookingConfirmation": "Potwierdzenie rezerwacji",
