Zmiana konwencji liczby mnogiej

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -25,12 +25,12 @@
   "bookingButtonAdd": "Dodaj do rezerwacji",
   "bookingStepTripInformation": "Informacje",
   "bookingStepTripInformationDescription": "Podaj informacje o swojej podróży aby zacząć proces rezerwacji",
-  "bookingStepActivityList": "Aktywności",
-  "bookingStepActivityListDescription": "Przypisz aktywności do dni w wybranym zakresie dat",
-  "bookingStepHotelList": "Hotel",
-  "bookingStepHotelListDescription": "Przypisz hotel lub hotele do dni w wybranym zakresie dat",
-  "bookingStepServiceList": "Usługi",
-  "bookingStepServiceListDescription": "Wybierz dodatkowe usługi",
+  "bookingStepActivities": "Aktywności",
+  "bookingStepActivitiesDescription": "Przypisz aktywności do dni w wybranym zakresie dat",
+  "bookingStepHotels": "Hotel",
+  "bookingStepHotelsDescription": "Przypisz hotel lub hotele do dni w wybranym zakresie dat",
+  "bookingStepServices": "Usługi",
+  "bookingStepServicesDescription": "Wybierz dodatkowe usługi",
   "bookingStepConfirm": "Potwierdzenie",
   "bookingStepConfirmDescription": "Podaj dane kontaktowe i potwierdź rezerwację",
   "bookingNoActivitySelected": "Brak aktywności",
