--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -25,12 +25,12 @@
   "bookingButtonAdd": "Add to reservation",
   "bookingStepTripInformation": "Information",
   "bookingStepTripInformationDescription": "Provide information about your trip to get started",
-  "bookingStepActivityList": "Activities",
-  "bookingStepActivityListDescription": "Select activities for days within selected date range",
-  "bookingStepHotelList": "Hotel",
-  "bookingStepHotelListDescription": "Select hotel or hotels for days within selected date range",
-  "bookingStepServiceList": "Services",
-  "bookingStepServiceListDescription": "Select additional services",
+  "bookingStepActivities": "Activities",
+  "bookingStepActivityiesDescription": "Select activities for days within selected date range",
+  "bookingStepHotels": "Hotel",
+  "bookingStepHotelsDescription": "Select hotel or hotels for days within selected date range",
+  "bookingStepServices": "Services",
+  "bookingStepServicesDescription": "Select additional services",
   "bookingStepConfirm": "Confirmation",
   "bookingStepConfirmDescription": "Provide contact data and confirm booking",
   "bookingNoActivitySelected": "No activity",
