[Bugfix] Email address validation

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -26,6 +26,7 @@
 
   "validationDateRange": "Invalid date range",
   "validationRequired": "Field required",
+  "validationInvalidEmail": "Invalid email address",
 
   "dateItemDisabled": "Date unavailable",
 
