--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -26,6 +26,7 @@
 
   "validationDateRange": "Błędny zakres dat",
   "validationRequired": "Pole wymagane",
+  "validationInvalidEmail": "Niepoprawny adres email",
 
   "dateItemDisabled": "Termin niedostępny",
 
