--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -28,6 +28,10 @@
   "validationRequired": "Field required",
   "validationInvalidEmail": "Invalid email address",
 
+  "messageWarning": "Warning",
+  "messageDateFullyOccupied": "We are sorry, we are fully booked on the date selected!",
+  "messageDatePartiallyOccupied": "We already have a booking on the date selected, but you can still join this activity.",
+
   "dateItemDisabled": "Date unavailable",
 
   "bookingButtonAdd": "Add to reservation",
