--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -29,8 +29,10 @@
   "validationInvalidEmail": "Niepoprawny adres email",
 
   "messageWarning": "Uwaga",
-  "messageDateFullyOccupied": "Wybrany termin jest w peni zarezerwowany! Przepraszamy!",
-  "messageDatePartiallyOccupied": "Wybrny termin jest już zarezerwowany, ale możesz dołączyć do istniejącej aktywności.",
+  "messageDateFullyOccupied": "Przeprzaszamy, ale wybrany termin jest już zarezerwowany! Na zarezerwowanej wycieczce pozostało {{remainingPersonCount}} miejsc.",
+  "messageDatePartiallyOccupied": "Wybrany termin jest już zarezerwowany, ale możesz dołączyć do zarezerwowanej aktywności. Na zarezerwowanej aktywności pozostało {{remainingPersonCount}} miejsc.",
+  "messageDateAllWithExceededPersonCount": "Przepraszamy, ale wszystkie aktywności są niedostępne, ponieważ liczebność grupy przekracza maksymalną dostępną.",
+  "messageDateSomeWithExceededPersonCount": "Niektóre aktywności są niedostępne, ponieważ liczebność grupy przekracza maksymalną dostępną.",
 
   "dateItemDisabled": "Termin niedostępny",
 
