--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -29,8 +29,10 @@
   "validationInvalidEmail": "Invalid email address",
 
   "messageWarning": "Warning",
-  "messageDateFullyOccupied": "We are sorry, we are already booked on the date selected! There are {{remainingPersonCount}} places left on the booked activity.",
-  "messageDatePartiallyOccupied": "We already have a booking on the date selected, but you can still join this activity. There are {{remainingPersonCount}} places left on the booked activity.",
+  "messageDateFullyOccupied": "We are sorry, we are already booked on the date selected! There is {{count}} place left on the booked activity.",
+  "messageDateFullyOccupied_plural": "We are sorry, we are already booked on the date selected! There are {{count}} places left on the booked activity.",
+  "messageDatePartiallyOccupied": "We already have a booking on the date selected, but you can still join this activity. There is {{count}} place left on the booked activity.",
+  "messageDatePartiallyOccupied_plural": "We already have a booking on the date selected, but you can still join this activity. There are {{count}} places left on the booked activity.",
   "messageDateAllWithExceededPersonCount": "We are sorry, all activities are unavailable because person count exceeds their maximum capacity.",
   "messageDateSomeWithExceededPersonCount": "Some activities are unavailable because person count exceeds their maximum capacity.",
 
