--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -28,6 +28,8 @@
   "validationRequired": "Pole wymagane",
   "validationInvalidEmail": "Niepoprawny adres email",
 
+  "dateItemDisabled": "Termin niedostępny",
+
   "messageWarning": "Uwaga",
   "messageDateFullyOccupied": "Przeprzaszamy, ale wybrany termin jest już zarezerwowany! Na zarezerwowanej aktywności pozostało {{remainingPersonCount}} miejsce.",
   "messageDateFullyOccupied_plural": "Przeprzaszamy, ale wybrany termin jest już zarezerwowany! Na zarezerwowanej aktywności pozostało {{remainingPersonCount}} miejsc.",
@@ -36,7 +38,12 @@
   "messageDateAllWithExceededPersonCount": "Przepraszamy, ale wszystkie aktywności są niedostępne, ponieważ liczebność grupy przekracza maksymalną dostępną.",
   "messageDateSomeWithExceededPersonCount": "Niektóre aktywności są niedostępne, ponieważ liczebność grupy przekracza maksymalną dostępną.",
 
-  "dateItemDisabled": "Termin niedostępny",
+  "activityDetailsInformation": "Informacje",
+  "activityDetailsPrice": "Cena za osobę",
+  "activityDetailsCategory": "Kategoria",
+  "activityDetailsDifficulty": "Trudność",
+  "activityDetailsDuration": "Czas trwania",
+  "activityDetailsStartHour": "Rozpoczęcie pomiędzy",
 
   "bookingButtonAdd": "Dodaj do rezerwacji",
   "bookingStepTripInformation": "Informacje",
